syntax = "proto3";

option go_package = "./service";

service Repo {
  rpc CreateRepo (stream RepoCreateRequest) returns (RepoCreateReply) {} // stream模式,发送创建仓库的数据流
}

message RepoCreateRequest {
  oneof body {
    RepoContext context = 1;
    bytes data = 2;
  }
}

message RepoContext {
  string creator_id = 1;
  string name = 2;
}

message Repository {
  string id = 1;
  string name = 2;
  string url = 3;
}

message RepoCreateReply {
  Repository repo = 1;
  int64 size = 2;
}

